--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@
             }
 
             .tlc-logo {
-                height: 60px;
+                height: 90px;
             }
 
             .tagline {
@@ -388,6 +388,10 @@
 
             .promo-red-text {
                 font-size: 1rem;
+            }
+
+            .promo-tnc {
+                font-size: 0.75rem;
             }
 
             .hero {
@@ -455,11 +459,11 @@
             }
 
             .tagline {
-                font-size: 1rem;
+                font-size: 0.85rem;
             }
 
             .promo-red-text {
-                font-size: 0.9rem;
+                font-size: 0.75rem;
             }
 
             .form-container {
